--- a/Javascript/wordcount/style.css
+++ b/Javascript/wordcount/style.css
@@ -10,39 +10,57 @@ body {
 }
 
 div.main-wrapper {
-    width: 800px;
+    max-width: 800px;
+    min-width: 420px;
     overflow: hidden;
     margin: 30px auto 0 auto;
 }
 
 button.calculate-words {
     width: 100%;
-    height: 35px;
+    height: 40px;
     float: left;
     color: #131313;
     font-weight: bold;
-    background-color: #CCCCCC;
-    margin: 5px 0 0 0;
+    background-color: #a4dd31;
+    margin: 10px 0 0 0;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
 }
 textarea.txt-area {
     width: 100%;
-    height: 350px;
     float: left;
+    height: 350px;
     color: #d9d9d9;
-    background-color: #3a3a3a;
+    padding: 10px;
     margin: 5px 0 0 0;
+    background-color: #3a3a3a;
+    border-radius: 10px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+
 }
 
 div.count-fields {
     width: 100%;
-    height: 20px;
-    line-height: 20px;
+    height: 40px;
+    line-height: 40px;
     float: left;
-    padding: 5px;
+    padding: 0 5px 0 10px;
     color: #272727;
     font-size: 11pt;
     background-color: #d5d5d5;
-    margin: 3px 0 0 0;
+    margin: 10px 0 0 0;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
 }
 
 .all-output {
