--- a/Javascript/wordcount/style.css
+++ b/Javascript/wordcount/style.css
@@ -16,13 +16,29 @@ div.main-wrapper {
     margin: 30px auto 0 auto;
 }
 
+h1 {
+    color: #2c2c2c;
+    margin: 0 0 0 0;
+    padding: 0 0 0 7px;
+}
+
+h2 {
+    font-size: 11pt;
+    margin: 0 0 20px 0;
+    padding: 0 0 0 7px;
+    color: #84b745;
+}
+
+h2 span {
+    color: #383838;
+}
 button.calculate-words {
     width: 100%;
     height: 40px;
     float: left;
     color: #131313;
     font-weight: bold;
-    background-color: #a4dd31;
+    background-color: #84b745;
     margin: 10px 0 0 0;
     border-radius: 5px;
     -moz-border-radius: 5px;
