--- a/Javascript/App WordCount/style.css
+++ b/Javascript/App WordCount/style.css
@@ -4,6 +4,10 @@
  * website: www.bksofteng.com
  */
 
+/**
+ * See it live at: http://www.bksofteng.com/code/word-count
+ */
+
 body {
     font-family: Arial, Helvetica, Arial, sans-serif;
     font-size: 12pt;
