--- a/Javascript/App Task Manager/style.css
+++ b/Javascript/App Task Manager/style.css
@@ -6,17 +6,46 @@
  *  website: bksofteng.com
  */
 
+/**
+ * See it live at: http://www.bksofteng.com/code/task-manager-app
+ */
 
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12px;
 }
 
+h1 {
+  width: 275px;
+  color: #2c2c2c;
+  font-size: 2em;
+  margin: 20px auto 0 auto;
+}
+
+h2 {
+  width: 275px;
+  height: 25px;
+  line-height: 25px;
+  font-size: 11pt;
+  margin: 0 0 20px 0;
+  padding: 0 0 0 7px;
+  color: #84b745;
+  margin: 0 auto;
+}
+
+h2 span {
+  width: auto ;
+  height: 25px;
+  line-height: 25px;
+  color: #353535;
+  padding: 0 3px 0 0;
+}
+
 #main {
 	width: 262px;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 30px;
+	margin-top: 15px;
 	border: 1px solid #808080;
 	overflow: hidden;
 	padding: 5px;
@@ -24,7 +53,7 @@ body {
 
 #input1 {
     margin-bottom: 10px;
-    width: 190px;
+    width: 177px;
 }
 
 .strike {
